fix for content block on smaller screens

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -25,7 +25,7 @@ main.drawings-page {
 
 .content-block {
   padding-block: 3em;
-  padding-block-start: 1em;
+  padding-block-start: 2em;
   padding-inline: 1.5em;
 }
 
